[gd_scene load_steps=37 format=3 uid="uid://b4on05tkph3dv"]

[ext_resource type="Texture2D" uid="uid://dyso7rrc2gh0u" path="res://Assets/PNG/Light/texture_08.png" id="1_2mgoq"]
[ext_resource type="Script" uid="uid://dth7nkxxcvn83" path="res://Scenes/level_2.gd" id="1_cggpd"]
[ext_resource type="Texture2D" uid="uid://bo44bapdnf5co" path="res://Assets/PNG/Orange/texture_03.png" id="3_42uki"]
[ext_resource type="PackedScene" uid="uid://d3snu2sbpkn6c" path="res://Objects/fan.tscn" id="3_v36qu"]
[ext_resource type="PackedScene" uid="uid://bjxwqe64spwid" path="res://Objects/door.tscn" id="4_t7v2y"]
[ext_resource type="Script" uid="uid://btb8exwohefpc" path="res://Scripts/reset_zone.gd" id="5_ait6c"]
[ext_resource type="Texture2D" uid="uid://wec7pnmmu2uw" path="res://Assets/PNG/Orange/texture_05.png" id="6_vcilj"]
[ext_resource type="Script" uid="uid://p0vglt8j4xgh" path="res://Scenes/spikes_lvl2.gd" id="7_42uki"]
[ext_resource type="PackedScene" uid="uid://bn6khnb8kd311" path="res://Objects/spikes.tscn" id="8_q0ycs"]
[ext_resource type="Script" uid="uid://dxfpubnayh5fs" path="res://Scenes/platform_lvl2.gd" id="8_uhnj4"]
[ext_resource type="AudioStream" uid="uid://bl0bmw0lv55gc" path="res://Scripts/VoiceLine/Video_Ready_For_Viewing.mp3" id="12_bl0du"]
[ext_resource type="Script" path="res://Scripts/TriggerScript/label.gd" id="12_hj5x7"]
[ext_resource type="Script" path="res://Scripts/TriggerScript/intro_area_level_2.gd" id="13_yvrk7"]
[ext_resource type="Script" path="res://Scripts/TriggerScript/door_area_level_2.gd" id="14_fhuy1"]
[ext_resource type="FontFile" uid="uid://cuan3t5utbm2a" path="res://Scripts/Space_Grotesk/SpaceGrotesk-VariableFont_wght.ttf" id="15_i6dbo"]
[ext_resource type="Script" path="res://Scripts/TriggerScript/spike_area_level_2.gd" id="16_e2piv"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_hj5x7"]
albedo_texture = ExtResource("1_2mgoq")
uv1_triplanar = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_yvrk7"]
albedo_texture = ExtResource("1_2mgoq")
uv1_triplanar = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_e2piv"]
albedo_texture = ExtResource("1_2mgoq")
uv1_triplanar = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ijtdf"]
albedo_texture = ExtResource("3_42uki")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1q6tm"]
albedo_texture = ExtResource("1_2mgoq")
uv1_triplanar = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_v36qu"]
albedo_texture = ExtResource("1_2mgoq")
uv1_triplanar = true

[sub_resource type="BoxShape3D" id="BoxShape3D_c5xoi"]
size = Vector3(5.5410156, 1, 3.3754883)

[sub_resource type="BoxShape3D" id="BoxShape3D_42uki"]
size = Vector3(20.963, 1, 8)

[sub_resource type="BoxShape3D" id="BoxShape3D_uhnj4"]
size = Vector3(20.488113, 1, 7.8186035)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2mgoq"]
albedo_texture = ExtResource("6_vcilj")

[sub_resource type="CylinderMesh" id="CylinderMesh_uhnj4"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_42uki"]
height = 0.4
radius = 1.5

[sub_resource type="GDScript" id="GDScript_ijtdf"]
script/source = "extends Area3D

@onready var narration = $IntroVoice
@onready var subtitle_label = $\"../CanvasLayer/Label\"

var triggered := false

func _ready() -> void:
	await get_tree().process_frame
	for body in get_overlapping_bodies():
		if body is CharacterBody3D:
			_trigger(body)
			break

func _on_body_entered(body: Node3D) -> void:
	if body is CharacterBody3D:
		_trigger(body)

func _trigger(body: Node3D) -> void:
	if triggered:
		return
	triggered = true

	narration.play()
	subtitle_label.visible = true

	subtitle_label.text = \"Dr. Aris: Initiating Unit 77 stress test. Remember, this prototype cost six billion credits. Let’s not break it in the first five minutes.\"
	await get_tree().create_timer(4.0).timeout

	subtitle_label.text = \"Dr. Ben: Relax. I’ve enabled S.A.F.E. protocols. The lab will practically play the game for it. Unit 77, please proceed to the exit.\"
	await get_tree().create_timer(4.0).timeout

	subtitle_label.visible = false
	body_entered.disconnect(_on_body_entered)
"

[sub_resource type="BoxShape3D" id="BoxShape3D_hj5x7"]
size = Vector3(9.710327, 5.0469055, 13.307251)

[sub_resource type="GDScript" id="GDScript_c5xoi"]
script/source = "extends Area3D

@onready var narration = $FailedVoice
@onready var subtitle_label = $\"../CanvasLayer/Label\"

func _ready() -> void:
	body_entered.connect(_on_body_entered)

func _on_body_entered(body: Node3D) -> void:
	if body is CharacterBody3D:
		_play_sequence()

func _play_sequence() -> void:
	narration.stop()
	narration.play()

	subtitle_label.visible = true

	subtitle_label.text = \"Dr. Aris: Initiating Unit 77 stress test. Remember, this prototype cost six billion credits. Let’s not break it in the first five minutes.\"
	await get_tree().create_timer(4.0).timeout

	subtitle_label.text = \"Dr. Ben: Relax. I’ve enabled S.A.F.E. protocols. The lab will practically play the game for it. Unit 77, please proceed to the exit.\"
	await get_tree().create_timer(4.0).timeout

	subtitle_label.visible = false
"

[sub_resource type="BoxShape3D" id="BoxShape3D_yvrk7"]
size = Vector3(2.441986, 2.2086182, 1.3613281)

[sub_resource type="BoxShape3D" id="BoxShape3D_sfey3"]
size = Vector3(9.710327, 5.0469055, 9.374268)

[sub_resource type="BoxShape3D" id="BoxShape3D_4k5rq"]
size = Vector3(2.441986, 2.2086182, 1.3613281)

[sub_resource type="Theme" id="Theme_5jii6"]

[sub_resource type="BoxShape3D" id="BoxShape3D_d42f2"]
size = Vector3(20.595917, 0.8696289, 7.877014)

[node name="Level2" type="Node3D"]
script = ExtResource("1_cggpd")

[node name="Fan" parent="." instance=ExtResource("3_v36qu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.6216011, 10.479364, -11.133338)

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="."]
use_collision = true

[node name="CSGBox3D" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0012335777, -0.25146484, -7.056301)
size = Vector3(10, 0.497, 22)
material = SubResource("StandardMaterial3D_hj5x7")

[node name="CSGBox3D7" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1.9106855e-15, 4.371139e-08, -1, 1, -4.371139e-08, 0, -4.371139e-08, -1, -4.371139e-08, 0.25042725, 7.152705, 0.47351256)
size = Vector3(14.624512, 0.497, 22.54065)
material = SubResource("StandardMaterial3D_yvrk7")

[node name="CSGBox3D8" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1.9106855e-15, 4.371139e-08, -1, 1, -4.371139e-08, 0, -4.371139e-08, -1, -4.371139e-08, 0.053466797, 4.8404493, -49.075264)
size = Vector3(10, 0.497, 11.024902)
material = SubResource("StandardMaterial3D_yvrk7")

[node name="CSGBox3D2" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25146484, -37.437023)
size = Vector3(10, 0.497, 22.960083)
material = SubResource("StandardMaterial3D_e2piv")

[node name="CSGBox3D5" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(-4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0, 1, 5.170293, -3.9405093, -5.1048393)
size = Vector3(20.976563, 0.497, 11.524963)
material = SubResource("StandardMaterial3D_yvrk7")

[node name="CSGBox3D6" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(-4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0, 1, -5.2476597, -4.011745, -41.19149)
size = Vector3(20.72754, 0.497, 15.2052)
material = SubResource("StandardMaterial3D_yvrk7")

[node name="CSGBox3D13" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(-4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0, 1, -5.2476597, -3.2019935, -3.2528133)
size = Vector3(20.72754, 0.497, 15.2052)
material = SubResource("StandardMaterial3D_yvrk7")

[node name="CSGBox3D11" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(-4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0, 1, 5.518524, -4.011745, -41.19149)
size = Vector3(20.72754, 0.497, 15.2052)
material = SubResource("StandardMaterial3D_yvrk7")

[node name="CSGBox3D9" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1.9106855e-15, 4.371139e-08, -1, 1, -4.371139e-08, 0, -4.371139e-08, -1, -4.371139e-08, 0.053466797, 4.8404493, -44.716305)
material_override = SubResource("StandardMaterial3D_ijtdf")
size = Vector3(10, 0.497, 11.024902)
material = SubResource("StandardMaterial3D_yvrk7")

[node name="CSGBox3D10" type="CSGBox3D" parent="CSGCombiner3D/CSGBox3D9"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.7460403, 0, 0.032561302)
operation = 2
size = Vector3(2.5079193, 0.497, 1.0902405)
material = SubResource("StandardMaterial3D_yvrk7")

[node name="CSGBox3D3" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, -0.4064026, -6.818725, -17.828384)
size = Vector3(23.643127, 0.497, 12.785156)
material = SubResource("StandardMaterial3D_1q6tm")

[node name="CSGBox3D21" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, -1, -8.940697e-08, 0, 8.940697e-08, -1, -9.816843, -0.24848954, -12.523746)
size = Vector3(10, 0.497, 11.258545)
material = SubResource("StandardMaterial3D_1q6tm")

[node name="CSGBox3D22" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, -1, -8.940697e-08, 0, 8.940697e-08, -1, 9.705671, -0.24848954, -12.459781)
size = Vector3(10, 0.497, 11.130615)
material = SubResource("StandardMaterial3D_1q6tm")

[node name="CSGBox3D23" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1.3311836e-07, -1, 0, 1, 1.3311836e-07, 9.705671, 0.3929899, -10.866105)
size = Vector3(10, 0.497, 13.407471)
material = SubResource("StandardMaterial3D_1q6tm")

[node name="CSGBox3D24" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1.3311836e-07, -1, 0, 1, 1.3311836e-07, -10.511021, 0.3929899, -10.866105)
size = Vector3(10, 0.497, 13.407471)
material = SubResource("StandardMaterial3D_1q6tm")

[node name="CSGBox3D25" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1.3311836e-07, -1, 0, 1, 1.3311836e-07, -10.511021, 0.3929899, -33.824646)
size = Vector3(10, 0.497, 13.407471)
material = SubResource("StandardMaterial3D_1q6tm")

[node name="CSGBox3D26" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1.3311836e-07, -1, 0, 1, 1.3311836e-07, 10.3412075, 0.3929899, -33.824646)
size = Vector3(10, 0.497, 13.407471)
material = SubResource("StandardMaterial3D_1q6tm")

[node name="CSGBox3D27" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, -1, -8.9406974e-08, 0, 8.9406974e-08, -1, 9.94166, -0.27411938, -32.650276)
size = Vector3(10, 0.497, 13.407471)
material = SubResource("StandardMaterial3D_1q6tm")

[node name="CSGBox3D28" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, -1, -8.9406974e-08, 0, 8.9406974e-08, -1, -9.938135, -0.27411938, -32.650276)
size = Vector3(10, 0.497, 13.407471)
material = SubResource("StandardMaterial3D_1q6tm")

[node name="CSGBox3D4" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, 0.17272949, -6.426147, -26.209152)
size = Vector3(20.606201, 0.497, 12)
material = SubResource("StandardMaterial3D_v36qu")

[node name="CSGBox3D10" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.19833374, -13.2384815, -24.05822)
size = Vector3(23.005798, 0.497, 12.689331)
material = SubResource("StandardMaterial3D_v36qu")

[node name="CSGBox3D18" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(-4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0, 1, -10.231733, -3.9405093, -22.130825)
size = Vector3(20.976563, 0.497, 27)
material = SubResource("StandardMaterial3D_v36qu")

[node name="CSGBox3D12" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(-1, 2.9802322e-08, 0, -2.9802322e-08, -1, 0, 0, 0, 1, 0.29102325, 6.728392, 2.2893562)
size = Vector3(20.976563, 0.497, 26.708008)
material = SubResource("StandardMaterial3D_v36qu")

[node name="CSGBox3D14" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(-1, 2.9802322e-08, 0, -2.9802322e-08, -1, 0, 0, 0, 1, 0.29102325, 6.728392, -47.301147)
size = Vector3(20.976563, 0.497, 26.708008)
material = SubResource("StandardMaterial3D_v36qu")

[node name="CSGBox3D15" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(-1, 2.9802322e-08, 0, -2.9802322e-08, -1, 0, 0, 0, 1, 0.29102325, 14.845011, -17.425022)
size = Vector3(20.976563, 0.497, 38.618164)
material = SubResource("StandardMaterial3D_v36qu")

[node name="CSGBox3D16" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(-1, 2.9802322e-08, 0, 1.3027009e-15, 4.371139e-08, -0.48375982, -2.9802322e-08, -1, -2.1145814e-08, 0.29102325, 12.960064, -33.89559)
size = Vector3(20.976563, 0.497, 26.708008)
material = SubResource("StandardMaterial3D_v36qu")

[node name="CSGBox3D17" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(-1, 2.9802322e-08, 0, 1.3027009e-15, 4.371139e-08, -0.48375982, -2.9802322e-08, -1, -2.1145814e-08, 0.29102325, 12.960064, -10.996517)
size = Vector3(20.976563, 0.497, 26.708008)
material = SubResource("StandardMaterial3D_v36qu")

[node name="CSGBox3D19" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(7.351371e-08, 1, 2.1145814e-08, 1.3027009e-15, 4.371139e-08, -0.48375982, -1, 7.351371e-08, 9.243128e-16, -10.26173, 12.960064, -16.036966)
size = Vector3(36.802063, 0.497, 26.708008)
material = SubResource("StandardMaterial3D_v36qu")

[node name="CSGBox3D20" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(7.351371e-08, 1, 2.1145814e-08, 1.3027009e-15, 4.371139e-08, -0.48375982, -1, 7.351371e-08, 9.243128e-16, 11.006819, 12.960064, -16.511911)
size = Vector3(35.852173, 0.497, 26.708008)
material = SubResource("StandardMaterial3D_v36qu")

[node name="CSGBox3D29" type="CSGBox3D" parent="CSGCombiner3D"]
transform = Transform3D(7.351371e-08, 1, 2.1145814e-08, 1.3027009e-15, 4.371139e-08, -0.48375982, -1, 7.351371e-08, 9.243128e-16, 11.006819, -3.2595005, -22.761118)
size = Vector3(23.35376, 0.497, 42.033325)
material = SubResource("StandardMaterial3D_v36qu")

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, -0.04063755, 0.99917394, 0, -0.99917394, -0.04063755, 0.6385622, 10.40229, -10.955917)
operation = 2
radius = 2.025879
height = 0.8203125

[node name="Door" parent="." instance=ExtResource("4_t7v2y")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.05274141, 1.1654887, -44.58361)

[node name="ResetZone" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -45.50666)
script = ExtResource("5_ait6c")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ResetZone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.021484375, 0.49529982, -1.1877441)
shape = SubResource("BoxShape3D_c5xoi")

[node name="SpotLight3D" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.692584, 0.7213373, 0, -0.7213373, 0.692584, 0, 6.9854136, -32.933556)
spot_range = 49.259014

[node name="Spikes" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -12.720978, -22.077507)
script = ExtResource("7_42uki")

[node name="Spikes" parent="Spikes" instance=ExtResource("8_q0ycs")]
transform = Transform3D(2.4529662, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 0)

[node name="Spikes3" parent="Spikes" instance=ExtResource("8_q0ycs")]
transform = Transform3D(2.4529662, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 2.529749)

[node name="Spikes2" parent="Spikes" instance=ExtResource("8_q0ycs")]
transform = Transform3D(2.4529662, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, -2.8082447)

[node name="StaticBody3D" type="StaticBody3D" parent="Spikes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.27949238, 0)

[node name="Area3D" type="Area3D" parent="Spikes/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9696245, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Spikes/StaticBody3D/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.48150635, 0, 0)
shape = SubResource("BoxShape3D_42uki")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Spikes/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3845749, 0, 0.053344727)
shape = SubResource("BoxShape3D_uhnj4")

[node name="Platform" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.3537035, -0.48773336, -21.937551)
script = ExtResource("8_uhnj4")

[node name="AnimatableBody3D" type="AnimatableBody3D" parent="Platform"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Platform/AnimatableBody3D"]
transform = Transform3D(3, 0, 0, 0, 0.14062095, 0, 0, 0, 3, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_2mgoq")
mesh = SubResource("CylinderMesh_uhnj4")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Platform/AnimatableBody3D"]
shape = SubResource("CylinderShape3D_42uki")

[node name="IntroArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1777285, -0.83177567)
script = SubResource("GDScript_ijtdf")

[node name="CollisionShape3D" type="CollisionShape3D" parent="IntroArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.06512451, 1.2002412, -2.1863403)
shape = SubResource("BoxShape3D_hj5x7")

[node name="IntroVoice" type="AudioStreamPlayer3D" parent="IntroArea"]
stream = ExtResource("12_bl0du")

[node name="DoorArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -47.226902)
script = SubResource("GDScript_c5xoi")

[node name="CollisionShape3D" type="CollisionShape3D" parent="DoorArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.005479276, 1.3658918, 1.4370232)
shape = SubResource("BoxShape3D_yvrk7")

[node name="FailedVoice" type="AudioStreamPlayer3D" parent="DoorArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.007870436, 0.9416851, 0.2707138)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("12_hj5x7")

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 96.0
offset_top = 558.0
offset_right = 335.0
offset_bottom = 581.0
metadata/_edit_use_anchors_ = true

[node name="IntroArea2" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1777285, -0.83177567)
script = ExtResource("13_yvrk7")

[node name="CollisionShape3D" type="CollisionShape3D" parent="IntroArea2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.06512451, 1.2002412, -0.21984863)
shape = SubResource("BoxShape3D_sfey3")

[node name="IntroVoice" type="AudioStreamPlayer3D" parent="IntroArea2"]
stream = ExtResource("12_bl0du")

[node name="DoorArea2" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -47.226902)
script = ExtResource("14_fhuy1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="DoorArea2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.005479276, 1.3658918, 1.4370232)
shape = SubResource("BoxShape3D_4k5rq")

[node name="FailedVoice" type="AudioStreamPlayer3D" parent="DoorArea2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.007870436, 0.9416851, 0.2707138)

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer2"]
offset_left = 96.0
offset_top = 558.0
offset_right = 335.0
offset_bottom = 581.0
theme = SubResource("Theme_5jii6")
theme_override_fonts/font = ExtResource("15_i6dbo")
theme_override_font_sizes/font_size = 16
script = ExtResource("12_hj5x7")
metadata/_edit_use_anchors_ = true

[node name="SpikeArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -10.057715, -22.170385)
script = ExtResource("16_e2piv")

[node name="CollisionShape3D" type="CollisionShape3D" parent="SpikeArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.270864, -0.47843075, 0.18462563)
shape = SubResource("BoxShape3D_d42f2")

[node name="DeathVoicee" type="AudioStreamPlayer3D" parent="SpikeArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 2.449111, 0, 0, 0)

[connection signal="body_entered" from="ResetZone" to="ResetZone" method="_on_body_entered"]
[connection signal="body_entered" from="Spikes/StaticBody3D/Area3D" to="Spikes" method="_on_body_entered"]
[connection signal="body_entered" from="IntroArea" to="IntroArea" method="_on_body_entered"]
[connection signal="body_entered" from="DoorArea" to="DoorArea" method="_on_body_entered"]
[connection signal="body_entered" from="IntroArea2" to="IntroArea2" method="_on_body_entered"]
[connection signal="body_entered" from="DoorArea2" to="DoorArea2" method="_on_body_entered"]
[connection signal="body_entered" from="SpikeArea" to="SpikeArea" method="_on_body_entered"]
